--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href ="styles.css">
 </head>
 <body>
-    <h1>Just a test page for now</h1>
-    <p>Just filler space for now</p>
-    <p>Just filler space for now</p>
-    <p>Just filler space for now</p>
+    <main>
+        <section class="glass"></section>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+
 </body>
 </html>
