Added more pictures and put them into the html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--Goal: Make a portfolio website from a tutorial to learn more about html and css
+    then later on customize more to my likings and  add more.
+
+    The three links that I want people ot be redirected to are (in order):
+    -About Me
+    -LinkedIn
+    -GitHub
+    -Blog
+        -On the main page I can put my recent projects
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +19,37 @@
 </head>
 <body>
     <main>
-        <section class="glass"></section>
+        <section class="glass">
+            <div class="dashboard">
+                <div class="user">
+                    <img src="./images/avatar.png" alt="" />
+                    <h3>Jared K.</h3>
+                    <p>Yep that's me...</p>
+                <div class="links">
+                    <div class="link">
+                        <img src="./images/aboutb.png" alt="" />
+                        <h2>About Me</h2>
+                    </div>
+                    <div class="link">
+                        <img src="./images/linkedinb.png" alt="" />
+                        <h2>LinkedIn</h2>
+                    </div>
+                    <div class="link">
+                        <img src="./images/githubb.png" alt="" />
+                        <h2>GitHub</h2>
+                    </div>
+                    <div class="link">
+                        <img src="./images/blogaltb.png" alt="" />
+                        <h2>Blog</h2>
+                    </div>
+                </div>
+                <div class ="filler">
+                    <h2><a href="https://www.youtube.com/watch?v=PV5c1lEmJE0" target="_blank">Click here to be enlightened</a></h2>
+                </div>
+            </div>            
+        </section>
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
-
 </body>
 </html>
