Added cards and progress

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <img src="./images/avatar.png" alt="" />
                     <h3>Jared K.</h3>
                     <p>Yep that's me...</p>
+                </div>
                 <div class="links">
                     <div class="link">
                         <img src="./images/aboutb.png" alt="" />
@@ -46,7 +47,41 @@
                 <div class ="filler">
                     <h2><a href="https://www.youtube.com/watch?v=PV5c1lEmJE0" target="_blank">Click here to be enlightened</a></h2>
                 </div>
-            </div>            
+            </div>
+            <div class="Projects">
+                <div class="status">
+                    <h1>Current Projects</h1>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="images/inprogb.png" alt="" >
+                        <div class="card-info">
+                            <h2>To Be Determined...</h2>
+                            <p>Unknown Language</p>
+                            <div class="progress"></div>
+                        </div>
+                        <h2 class="percentage">0%</h2>
+                    </div>
+                    <div class="card">
+                        <img src="images/inprogb.png" alt="" >
+                        <div class="card-info">
+                            <h2>To Be Determined...</h2>
+                            <p>Unknown Language</p>
+                            <div class="progress"></div>
+                        </div>
+                        <h2 class="percentage">0%</h2>
+                    </div>
+                    <div class="card">
+                        <img src="images/inprogb.png" alt="" >
+                        <div class="card-info">
+                            <h2>To Be Determined...</h2>
+                            <p>Unknown Language</p>
+                            <div class="progress"></div>
+                        </div>
+                        <h2 class="percentage">0%</h2>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <div class="circle1"></div>
