--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="styles.css">
 </head>
 <body>
@@ -48,7 +51,7 @@
                     <h2><a href="https://www.youtube.com/watch?v=PV5c1lEmJE0" target="_blank">Click here to be enlightened</a></h2>
                 </div>
             </div>
-            <div class="Projects">
+            <div class="projects">
                 <div class="status">
                     <h1>Current Projects</h1>
                 </div>
@@ -88,5 +91,3 @@
     <div class="circle2"></div>
 </body>
 </html>
-
-#Stopped video at 19:00
