--- a/aboutme.html
+++ b/aboutme.html
@@ -30,10 +30,10 @@
                     <p>Yep that's me...</p>
                 </div>
                 <div class="links">
-                    <a href="./aboutme.html" class="link">
+                    <div class="link">
                         <img src="./images/aboutb.png" alt="" />
                         <h2>About Me</h2>
-                    </a>
+                    </div>
                     <div class="link">
                         <img src="./images/linkedinb.png" alt="" />
                         <h2>LinkedIn</h2>
